unpackaged/main/default/objects/CMPL123__Device__c/CMPL123__Device__c.object-meta.xml
<CustomObject>
    <description>Device</description>
    <label>Device</label>
    <nameField>
        <label>Serial Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Devices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>