unpackaged/main/default/objects/CMPL123__Device__c/fields/CMPL123__Competitor_Device__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Competitor_Device__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Competitor Device</description>
        <label>Competitor Device</label>
        <type>Checkbox</type>
    </CustomField>