unpackaged/main/default/objects/CMPL123__Device__c/fields/CMPL123__Courier__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Courier__c</fullName>
        <description>The courier used to deliver the device.</description>
        <label>Courier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FDX</fullName>
                </value>
                <value>
                    <fullName>UPS</fullName>
                </value>
                <value>
                    <fullName>OTHER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>