unpackaged/main/default/objects/CMPL123__Device__c/fields/CMPL123__Courier_Tracking_Number__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Courier_Tracking_Number__c</fullName>
        <description>The shipment tracking number provided by the courier.</description>
        <label>Courier Tracking Number</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>