unpackaged/main/default/objects/CMPL123__Device__c/fields/CMPL123__Days_Shipped__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Days_Shipped__c</fullName>
        <description>Days Shipped</description>
        <formula>IF(NOT(ISBLANK(CMPL123__Shipped_Date__c)), ROUND((NOW() - CMPL123__Shipped_Date__c), 0), null)</formula>
        <inlineHelpText>No. of days shipped</inlineHelpText>
        <label>Days Shipped</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>