unpackaged/main/default/objects/CMPL123__Device__c/fields/CMPL123__Disposition__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Disposition__c</fullName>
        <description>Current Disposition of the device</description>
        <label>Disposition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Shipped</fullName>
                </value>
                <value>
                    <fullName>Installed</fullName>
                </value>
                <value>
                    <fullName>Removed</fullName>
                </value>
                <value>
                    <fullName>Returned</fullName>
                </value>
                <value>
                    <fullName>Discarded</fullName>
                </value>
                <value>
                    <fullName>Scrapped</fullName>
                </value>
                <value>
                    <fullName>On-Consignment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>