unpackaged/main/default/objects/CMPL123__Device__c/fields/CMPL123__Lot_Number__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Lot_Number__c</fullName>
        <description>Lot number in which the product was produced.</description>
        <label>Lot Number</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>