unpackaged/main/default/objects/CMPL123__Device__c/fields/CMPL123__Manufactured_Date__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Manufactured_Date__c</fullName>
        <description>Date the product was manufactured</description>
        <label>Manufactured Date</label>
        <type>DateTime</type>
    </CustomField>