unpackaged/main/default/objects/CMPL123__Device__c/fields/CMPL123__Product__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>CMPL123__Product__c</referenceTo>
        <relationshipLabel>Devices</relationshipLabel>
        <relationshipName>Devices</relationshipName>
        <type>Lookup</type>
    </CustomField>