unpackaged/main/default/objects/CMPL123__Device__c/fields/CMPL123__Product_Expiry_Date__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Product_Expiry_Date__c</fullName>
        <description>Expiration date of the product</description>
        <label>Product Expiry Date</label>
        <type>DateTime</type>
    </CustomField>