unpackaged/main/default/objects/CMPL123__Device__c/fields/CMPL123__Shipped_Date__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Shipped_Date__c</fullName>
        <description>The date the device was shipped to the account.</description>
        <label>Shipped Date</label>
        <type>DateTime</type>
    </CustomField>