unpackaged/main/default/objects/CMPL123__Device__c/fields/CMPL123__Shipped_to_Account__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Shipped_to_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account the device was shipped to.</description>
        <label>Shipped to Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Devices</relationshipLabel>
        <relationshipName>Devices</relationshipName>
        <type>Lookup</type>
    </CustomField>