unpackaged/main/default/objects/CMPL123__Device__c/fields/CMPL123__Sterilization_Number__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Sterilization_Number__c</fullName>
        <description>Sterilization Run Number for a medical device product</description>
        <label>Sterilization Number</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>