unpackaged/main/default/objects/CMPL123__Device__c/fields/CMPL123__Sterilization_Run_Date__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Sterilization_Run_Date__c</fullName>
        <description>Sterilization Run Date</description>
        <inlineHelpText>Sterilization Run Date</inlineHelpText>
        <label>Sterilization Run Date</label>
        <type>DateTime</type>
    </CustomField>