unpackaged/main/default/objects/CMPL123__Device__c/fields/CMPL123__Sterilization_Run_Number__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Sterilization_Run_Number__c</fullName>
        <description>Sterilization Run Number</description>
        <inlineHelpText>Sterilization Run Number</inlineHelpText>
        <label>Sterilization Run Number</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>