unpackaged/main/default/objects/CMPL123__Device__c/fields/CMPL123__Unique_Device_Identifier__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Unique_Device_Identifier__c</fullName>
        <description>Globally Unique Device Identifier.</description>
        <label>Unique  Device Identifier</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>